# docker-fione

./: README.md
13.10/: Dockerfile
13.6/: Dockerfile
13.7/: Dockerfile
13.8/: Dockerfile
13.9/: Dockerfile
14.1/: Dockerfile
14.6/: Dockerfile
compose/: compose.yaml  docker-compose.yml
python/: Dockerfile  build.sh
snapshot/: Dockerfile  pyproject.toml  requirements.txt
