[tool.poetry]
name = "fione"
version = "14.6.0"
description = "Enterprise AI Platform"
authors = ["CodeLibs, Inc. <info@codelibs.co>"]

[tool.poetry.dependencies]
python = "3.10.*"
requests = "^2.28.2"
cython = "^0.29.33"
tabulate = "^0.9.0"
colorama = "^0.4.6"
future = "^0.18.3"
grip = "^4.6.1"
numpy = "^1.24.1"
scipy = "^1.10.0"
pandas = "^1.5.3"
gensim = "^4.3.0"
pillow = "^9.4.0"
nltk = "^3.8.1"
beautifulsoup4 = "^4.11.2"
ipython = "^8.9.0"
jupyter = "^1.0.0"
scikit-learn = "^1.2.1"
h2o = "^3.38.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
